# sdl-conan-android

./: .gitignore  CMakeLists.txt  conanfile.py  profile-android64  profile-options
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/app/src/main/res/values-night/: themes.xml
android-app/gradle/: libs.versions.toml
android-app/gradle/wrapper/: gradle-wrapper.properties
